--- a/roles/confluent.kafka_broker/templates/server.properties.j2
+++ b/roles/confluent.kafka_broker/templates/server.properties.j2
@@ -9,73 +9,43 @@ broker.id={{ broker_id | default(groups.kafka_broker.index(inventory_hostname) +
 {{key}}={{value}}
 {% endfor %}
 
-{% if fips_enabled|bool %}
-enable.fips=true
-security.providers=io.confluent.kafka.security.fips.provider.BcFipsProviderCreator,io.confluent.kafka.security.fips.provider.BcFipsJsseProviderCreator
+listeners={{kafka_broker_security_protocol}}://:{{kafka_port}}
+
+security.inter.broker.protocol={{kafka_broker_security_protocol}}
+{% if kafka_broker_ssl_enabled|bool %}
+ssl.truststore.location={{truststore_path}}
+ssl.truststore.password={{truststore_storepass}}
+ssl.keystore.location={{keystore_path}}
+ssl.keystore.password={{keystore_storepass}}
+ssl.key.password={{keystore_keypass}}
 {% endif %}
-
-listeners={% for listener in kafka_broker_listeners|dict2items %}{% if loop.index > 1%},{% endif %}{{ listener['value']['name'] }}://{{ listener['value']['hostname'] | default('') }}:{{ listener['value']['port'] }}{% endfor %}
-
-listener.security.protocol.map={% for listener in kafka_broker_listeners|dict2items %}{% if loop.index > 1%},{% endif %}{{ listener['value']['name'] }}:{{ listener['value'] | kafka_protocol_defaults(sasl_protocol, ssl_enabled)}}{% endfor %}
-
-
-## Inter Broker Listener Configuration
-inter.broker.listener.name={{kafka_broker_listeners[kafka_broker_inter_broker_listener_name]['name']}}
-{% if kafka_broker_listeners[kafka_broker_inter_broker_listener_name]['sasl_protocol'] | default(sasl_protocol) | normalize_sasl_protocol != 'none' %}
-sasl.mechanism.inter.broker.protocol={{kafka_broker_listeners[kafka_broker_inter_broker_listener_name]['sasl_protocol'] | default(sasl_protocol) | normalize_sasl_protocol}}
+{% if kafka_broker_ssl_mutual_auth_enabled|bool %}
+ssl.client.auth=required
 {% endif %}
-{% if kafka_broker_sasl_enabled_mechanisms|length > 0 %}
-sasl.enabled.mechanisms={% for mechanism in kafka_broker_sasl_enabled_mechanisms %}{% if loop.index > 1%},{% endif %}{{ mechanism|upper }}{% endfor %}
-
+{% if sasl_protocol == 'plain' %}
+sasl.enabled.mechanisms=PLAIN
+sasl.mechanism.inter.broker.protocol=PLAIN
+listener.name.sasl_ssl.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="broker" password="broker-secret" user_broker="broker-secret" user_client="client-secret";
 {% endif %}
-{% if 'GSSAPI' in kafka_broker_sasl_enabled_mechanisms %}
+{% if sasl_protocol == 'kerberos' %}
+sasl.enabled.mechanisms=GSSAPI
+sasl.mechanism.inter.broker.protocol=GSSAPI
 sasl.kerberos.service.name={{kerberos_kafka_broker_primary}}
 {% endif %}
 
-{% for listener in kafka_broker_listeners|dict2items %}
-{% include 'listener.j2' %}
-
-{% endfor %}
-
-{% if kafka_broker_schema_validation_enabled|bool %}
-{% set schema_registries = groups.get('schema_registry', []) %}
-{% if schema_registries %}
-# Schema Registry Configuration
-confluent.schema.registry.url={% for host in groups['schema_registry'] %}{% if loop.index > 1%},{% endif %}{{ schema_registry_http_protocol }}://{{ host }}:{{ schema_registry_listener_port }}{% endfor %}
-
-{% if schema_registry_ssl_enabled|bool %}
-confluent.schema.registry.ssl.truststore.location={{kafka_broker_truststore_path}}
-confluent.schema.registry.ssl.truststore.password={{kafka_broker_truststore_storepass}}
-confluent.schema.registry.ssl.keystore.location={{kafka_broker_keystore_path}}
-confluent.schema.registry.ssl.keystore.password={{kafka_broker_keystore_storepass}}
-confluent.schema.registry.ssl.key.password={{kafka_broker_keystore_keypass}}
+confluent.metrics.reporter.security.protocol={{kafka_broker_security_protocol}}
+{% if kafka_broker_ssl_enabled|bool %}
+confluent.metrics.reporter.ssl.truststore.location={{truststore_path}}
+confluent.metrics.reporter.ssl.truststore.password={{truststore_storepass}}
+confluent.metrics.reporter.ssl.keystore.location={{keystore_path}}
+confluent.metrics.reporter.ssl.keystore.password={{keystore_storepass}}
+confluent.metrics.reporter.ssl.key.password={{keystore_keypass}}
 {% endif %}
-{% endif %}
-{% endif %}
-
-## Metrics Reporter Configuration
-confluent.metrics.reporter.security.protocol={{kafka_broker_listeners.external | kafka_protocol_defaults(sasl_protocol, ssl_enabled) }}
-{% if kafka_broker_listeners.external.ssl_enabled|bool %}
-confluent.metrics.reporter.ssl.truststore.location={{kafka_broker_truststore_path}}
-confluent.metrics.reporter.ssl.truststore.password={{kafka_broker_truststore_storepass}}
-{% if kafka_broker_listeners.external.ssl_mutual_auth_enabled|bool %}
-confluent.metrics.reporter.ssl.keystore.location={{kafka_broker_keystore_path}}
-confluent.metrics.reporter.ssl.keystore.password={{kafka_broker_keystore_storepass}}
-confluent.metrics.reporter.ssl.key.password={{kafka_broker_keystore_keypass}}
-{% if pkcs12_enabled|bool %}
-confluent.metrics.reporter.ssl.keymanager.algorithm=PKIX
-confluent.metrics.reporter.ssl.trustmanager.algorithm=PKIX
-confluent.metrics.reporter.ssl.keystore.type=pkcs12
-confluent.metrics.reporter.ssl.truststore.type=pkcs12
-{% endif %}
-{% endif %}
-{% endif %}
-{% if kafka_broker_listeners.external.sasl_protocol | normalize_sasl_protocol == 'PLAIN' %}
+{% if sasl_protocol == 'plain' %}
 confluent.metrics.reporter.sasl.mechanism=PLAIN
-confluent.metrics.reporter.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
-   username="{{sasl_plain_users.admin.principal}}" password="{{sasl_plain_users.admin.password}}";
+confluent.metrics.reporter.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="client" password="client-secret";
 {% endif %}
-{% if kafka_broker_listeners.external.sasl_protocol | normalize_sasl_protocol == 'GSSAPI' %}
+{% if sasl_protocol == 'kerberos' %}
 confluent.metrics.reporter.sasl.mechanism=GSSAPI
 confluent.metrics.reporter.sasl.kerberos.service.name={{kerberos_kafka_broker_primary}}
 confluent.metrics.reporter.sasl.jaas.config=com.sun.security.auth.module.Krb5LoginModule required \
@@ -83,9 +53,4 @@ confluent.metrics.reporter.sasl.jaas.config=com.sun.security.auth.module.Krb5Log
    storeKey=true \
    keyTab="{{kerberos.keytab_dir}}/{{kafka_broker_kerberos_keytab_path | basename}}" \
    principal="{{kafka_broker_kerberos_principal}}";
-{% endif %}
-{% if kafka_broker_listeners.external.sasl_protocol | normalize_sasl_protocol == 'SCRAM-SHA-256' %}
-confluent.metrics.reporter.sasl.mechanism=SCRAM-SHA-256
-confluent.metrics.reporter.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required \
-   username="{{sasl_scram_users.admin.principal}}" password="{{sasl_scram_users.admin.password}}";
 {% endif %}
